Price index with cepii nomenclature

--- a/doc/documentation.tex
+++ b/doc/documentation.tex
@@ -74,5 +74,9 @@ A partir de BACI, on obtient également le commerce total au niveau $K, t$, que 
 
 On obtient le commerce en volume en divisant l'indice de commerce en valeur par l'indice de prix. 
 
+\paragraph{Nomenclature CEPII}
+
+Le secteur manufacturier est défini en excluant la filière ``01" et les produits primaires.
+
 \end{document}
 
